fix header bottom padding on mobile

--- a/web/static/css/app.less
+++ b/web/static/css/app.less
@@ -37,9 +37,13 @@ body {
 
 			.pure-g .pure-u-1 {
 				height: 40px;
+
 				@media @lg {
 					height: 30px;
 				}
+			}
+			.pure-u-1:last-child {
+				height: 28px;
 			}
 
 			.logo {
